[package]
name = "truncator"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Kostas Chalkias <kostas@mystenlabs.com>"]
publish = ["crates-io"]
description = "Crypto Truncator paper utilities"
repository = "https://github.com/MystenLabs/truncator"

[dependencies]
fastcrypto = "2.0.0"
