[package]
name = "truncator"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Kostas Chalkias <kostas@mystenlabs.com>"]
publish = ["crates-io"]
description = "Crypto Truncator paper utilities"
repository = "https://github.com/MystenLabs/truncator"

[dependencies]
fastcrypto = "2.0.0"
rand = { version = "0.8.5", features = ["std"] }
rust_secp256k1 = { version = "0.24.0", package = "secp256k1", features = ["recovery", "rand-std", "bitcoin_hashes", "global-context"] }
