[package]
name = "truncator"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Kostas Chalkias <kostas@mystenlabs.com>"]
publish = ["crates-io"]
description = "Crypto Truncator paper utilities"
repository = "https://github.com/MystenLabs/truncator"

[dependencies]
fastcrypto = "0.1.3"
rand = { version = "0.8.5", features = ["std"] }
rust_secp256k1 = { version = "0.24.1", package = "secp256k1", features = ["recovery", "rand-std", "bitcoin_hashes", "global-context"] }

[dev-dependencies]
criterion = "0.4.0"
signature = { version = "1.6.4", features = ["rand-preview"] }

[features]
pubkey = []
checksum = []

[[bench]]
name = "mining"
harness = false
